마스터 푸쉬용

--- a/public/columns.html
+++ b/public/columns.html
@@ -219,7 +219,7 @@ async function drop(event, columnId) {
 <body>
   <div class="board">
     <div class="auth-icons">
-      <button class="mypage-btn">mypage</button>
+      <a href="./user.html" class="mypage-btn">mypage</a>
       <button class="action-btn">초대하기</button>
     </div>
     <div class="menu">
@@ -265,8 +265,8 @@ async function drop(event, columnId) {
     </div>
 </div>
 </div>
-<script src="./js/columns.js">
-  
+<script src="./js/columns.js"></script>
+<script src="./js/board.js"></script>
 </script>
 </body>
 </html>
