--- a/public/cards.html
+++ b/public/cards.html
@@ -1,88 +1,113 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Jua&display=swap"
-      rel="stylesheet"
-    />
-    <title id="tabTitle">카드 제목이 들어갑니다</title>
-    <style>
-      * {
-        font-family: 'Jua', sans-serif;
-      }
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link
+href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+rel="stylesheet"
+integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+crossorigin="anonymous"
+/>
+<link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet" />
+<title id="tabTitle">카드 제목이 들어갑니다</title>
+<style>
+* {
+font-family: "Jua", sans-serif;
+}
 
-      header {
-        margin: 100px 20px 0px 20px;
-        height: 120px;
-      }
+header {
+margin: 100px 20px 0px 20px;
+height: 120px;
+}
 
-      .cardTitle {
-        font-size: 60px;
-        text-align: center;
-      }
-      .cardInfo {
-        font-size: 17px;
-        text-align: center;
-      }
-      .cardContent {
-        font-size: 19px;
-        text-align: center;
-      }
-    </style>
-  </head>
-  <body>
-    <header>
-      <div id="cardTitle" class="cardTitle">카드 제목이 들어갑니다</div>
-      <div id="cardInfo" class="cardInfo">작성자 | 작성일자 | 수정 | 삭제</div>
-    </header>
-    <hr />
-    <main>
-      <div id="cardContent" class="cardContent"></div>
-    </main>
-    <hr />
-    <footer>여긴 뭐가 들어가야 할까요</footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      function getCardData(CardId) {
-        fetch(`/api/cards/${CardId}`)
-          .then((response) => response.json())
-          .then((data) => {
-            const tabTitle = document.getElementById('tabTitle');
-            tabTitle.textContent = data.data.title;
+.cardTitle {
+font-size: 60px;
+text-align: center;
+}
+.cardInfo {
+font-size: 17px;
+text-align: center;
+}
+.cardContent {
+font-size: 19px;
+text-align: center;
+}
+</style>
+</head>
+<body>
+<header>
+<div id="cardTitle" class="cardTitle">카드 제목이 들어갑니다</div>
+<div id="cardInfo" class="cardInfo">작성자 | 작성일자 | 수정 | 삭제</div>
+</header>
+<hr />
+<main>
+<div id="cardContent" class="cardContent"></div>
+</main>
+<hr />
 
-            const cardTitle = document.getElementById('cardTitle');
-            cardTitle.textContent = data.data.title;
+<script></script>
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+crossorigin="anonymous"
+</script>
+<script>
+function getCardData(CardId) {
+fetch(`/api/cards/${CardId}`)
+.then((response) => response.json())
+.then((data) => {
+const tabTitle = document.getElementById("tabTitle");
+tabTitle.textContent = data.data.title;
 
-            const cardInfo = document.getElementById('cardInfo');
-            const createdAt = new Date(data.data.createdAt);
-            const formattedDate = createdAt.toLocaleDateString('ko-KR');
-            cardInfo.textContent = `작성자 | ${formattedDate} | 수정 | 삭제`;
+const cardTitle = document.getElementById("cardTitle");
+cardTitle.textContent = data.data.title;
 
-            const cardContent = document.getElementById('cardContent');
-            cardContent.textContent = data.data.content;
-          })
-          .catch((error) => console.error('카드 정보 가져오기 오류', error));
-      }
+const cardInfo = document.getElementById("cardInfo");
+const createdAt = new Date(data.data.createdAt);
+const formattedDate = createdAt.toLocaleDateString("ko-KR");
+cardInfo.textContent = `작성자 | ${formattedDate} | 수정 | 삭제`;
 
-      document.addEventListener('DOMContentLoaded', function () {
-        const queryString = window.location.search;
-        const urlParams = new URLSearchParams(queryString);
-        const CardId = urlParams.get('CardId');
+const cardContent = document.getElementById("cardContent");
+cardContent.textContent = data.data.content;
+})
+.catch((error) => console.error("카드 정보 가져오기 오류", error));
+}
 
-        getCardData(CardId);
-      });
-    </script>
-  </body>
+document.addEventListener("DOMContentLoaded", function () {
+// const queryString = window.location.search;
+// const urlParams = new URLSearchParams(queryString);
+// const CardId = urlParams.get("CardId");
+CardId = "1";
+getCardData(CardId);
+});
+</script>
+</body>
+<footer>여긴 뭐가 들어가야 할까요</footer>
+<div class="container my-4">
+<div class="row">
+<div class="col">
+<div class="card" data-card-id="1">
+<ul class="list-group list-group-item" id="comment-list"></ul>
+<div class="card-body">
+<form id="comment-form">
+<div class="mb-3">
+<label for="comment-input" class="form-label">댓글</label>
+<input type="text" class="form-control" id="comment-input" placeholder="댓글을 입력해주세요" />
+</div>
+<button type="submit" class="btn btn-primary">댓글 추가</button>
+</form>
+</div>
+</div>
+</div>
+</div>
+</div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+<script
+src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+crossorigin="anonymous"
+></script>
+<script src="./js/comments.js"></script>
+
 </html>
